Use variables for screen size Remove lots of unused code

--- a/index.jade
+++ b/index.jade
@@ -13,7 +13,7 @@ html
 					small You may need to zoom out a little if the text is too big
 
 				article.first
-					h1(style="font-size: 256pt; text-transform: uppercase") Scalpels and guns
+					h1(style="text-transform: uppercase") Scalpels and AKs
 					h2 Scrape anything with node.js
 					br
 					h3
@@ -32,7 +32,7 @@ html
 					h1(style="font-size: 192pt;") CertSimple do EV 40-100x faster than Symantec, GoDaddy, and Comodo.
 
 				article
-					h2 We connect to APIs for:
+					h2 We need to connect to:
 					ul.build
 						li Government data for 100M companies in 63 countries
 						li 60+ independent data sources
@@ -58,12 +58,12 @@ html
 
 				article
 					h2 How to log in - cookies!
-					.halves.build
-						.half
+					.comparison
+						.left
 							p Using plain request:
 							code var request = request.defaults({jar: true})
 
-						.half
+						.right
 							p Using superagent:
 							code var superagent = require('superagent').agent();
 
@@ -124,13 +124,6 @@ html
 					h1 CASPER CAN BE A MICROSERVICE
 
 				article
-					h1 Follow me.
-					h2(style="font-size:60px;") I will tweet storm links to everything now.
-					img(src='images/twitter-logo.png', style="height: 260px; width: 300px; margin:100px auto")
-					h2
-						a(href='http://twitter.com/mikemaccana', target='_blank') @mikemaccana
-
-				article
 					h1 Launching something?
 
 				article
@@ -141,7 +134,7 @@ html
 					img(src='images/certsimple-stickers.png')
 
 				article
-					h1.big Thanks
+					h1.big Thanks!
 					h2 @mikemaccana
 					h2 certsimple.com
 
