--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,6 +4,9 @@
 @import	"universal";
 @import	"mixins";
 
+$slide-width: 1920;
+$slide-height: 1080;
+
 .large {
 	font-size: 200px;
 }
@@ -32,12 +35,15 @@
 		display: block;
 		position: absolute;
 		overflow: hidden;
-		width: 1920px;
-		height: 1080px;
-		margin-left: -960px;
-		margin-top: -540px;
+		width: #{$slide-width}px;
+		height: #{$slide-height}px;
+
+		// TODO: remove all this amd move to flex by default
+		margin-left: -#{$slide-width / 2}px;
+		margin-top: -#{$slide-height / 2}px;
 		left: 50%;
 		top: 50%;
+
 		border-radius: 5px;
 		padding: 0;
 		background-color: none;
@@ -46,15 +52,9 @@
 		flex-direction: column;
 		display: none;
 		text-align: center;
-		color: #6c818f;
+		color: $pale-blue;
 		font-size: 30px;
 		letter-spacing: -1px;
-		* {
-			display: block;
-			clear: both;
-			min-width: 100%;
-			flex-wrap: wrap;
-		}
 
 		img {
 			min-width: 0;
@@ -183,18 +183,9 @@ p {
 p:first-child {
 	margin-top: 0;
 }
-
-.half {
-	width: 350px;
-	float: left;
-}
 .button:hover {
 	color: #fff;
 	background: #392c44;
-}
-pre.half {
-	width: 400px;
-	font-size: 17px;
 }
 p.small {
 	color: #000;
@@ -211,101 +202,28 @@ article.fill h3 {
 	padding-right: 60px;
 }
 
-.center {
-	text-align: center;
-}
-.center h3 {
-	font-size: 100px;
-	margin-top: 220px;
-}
-ul {
-	list-style: none;
-	margin: 0;
-	padding: 0;
-	margin-top: 40px;
-	margin-left: 0.75em;
-}
 
-div.author {
-	text-align: right;
-	font-size: 40px;
-	margin-top: 20px;
-	margin-right: 150px;
-}
-div.author::before {
-	content: '—';
-}
-article.smaller p,
-article.smaller ul {
-	font-size: 20px;
-	line-height: 24px;
-	letter-spacing: 0;
-}
-article.smaller table {
-	font-size: 20px;
-	line-height: 24px;
-	letter-spacing: 0;
-}
-article.smaller pre {
-	font-size: 15px;
-	line-height: 20px;
-	letter-spacing: 0;
-}
-article.smaller q {
-	font-size: 40px;
-	line-height: 48px;
-}
-article.smaller q::before,
-article.smaller q::after {
-	font-size: 60px;
-}
+
 .build > * {
-
 	transition: opacity 0.2s ease-in-out 0.2s;
 }
 .to-build {
 	opacity: 0;
 }
-.prettyprint .str,
-.prettyprint .atv {
-/* a markup attribute value */
-	color: #008a35;
-}
-.prettyprint .kwd,
-.prettyprint .tag {
-/* a markup tag name */
-	color: #06c;
-}
-.prettyprint .com {
-/* a comment */
-	color: #7f7f7f;
-	font-style: italic;
-}
-.prettyprint .lit {
-/* a literal value */
-	color: #7f0000;
-}
-.prettyprint .pun,
-.prettyprint .opn,
-.prettyprint .clo {
-	color: #7f7f7f;
-}
-.prettyprint .typ,
-.prettyprint .atn,
-.prettyprint .dec,
-.prettyprint .var {
-/* a declaration; a variable name */
-	color: #7f007f;
-}
 
 
-
-.halves {
+.comparison {
 	width: 100%;
+	min-width: none;
+	display: flex !important;
+	flex-flow: column wrap;
+	align-items: center;
+	.left, .right {
+		width: 50%;
+		flex: 1 0 0px;
+	}
 }
-.half {
-	width: 50%;
-}
+
 img.wide {
 	width: 100%;
 	height: auto;
