--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,22 +7,6 @@
 $slide-width: 1920;
 $slide-height: 1080;
 
-.large {
-	font-size: 200px;
-}
-.big {
-	font-size: 250px;
-}
-.huge {
-	font-size: 450px;
-}
-
-.wrapper {
-	background: #bada55;
-	color: #d12028;
-	border: 1px solid #fff;
-}
-
 .slides {
 	width: 100%;
 	height: 100%;
@@ -214,10 +198,10 @@ article.fill h3 {
 
 .comparison {
 	width: 100%;
-	min-width: none;
-	display: flex !important;
-	flex-flow: column wrap;
+	display: flex;
+	flex-flow: row;
 	align-items: center;
+	padding-top: 48px;
 	.left, .right {
 		width: 50%;
 		flex: 1 0 0px;
