--- a/scss/universal.scss
+++ b/scss/universal.scss
@@ -48,6 +48,7 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
   font-size: 384pt;
   line-height: 256pt;
+  letter-spacing: 16.1pt;
   font-family: $heading-font;
   padding: 0;
   margin: 0;
@@ -161,28 +162,7 @@ li::before {
 	margin-left: -0.75em;
 	position: absolute;
 }
-pre {
-	font-size: 20px;
-	line-height: 28px;
-	padding: 5px 10px;
-	letter-spacing: -1px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	color: #000;
-	background: #f0f0f0;
-	border: 1px solid #e0e0e0;
-	box-shadow: inset 0 2px 6px rgba(0,0,0,0.1);
-	overflow: hidden;
-}
-code {
-	font-size: 95%;
-	font-family: 'Droid Sans Mono', 'Courier New', monospace;
-	display: inline-block;
-	background: rgba(255,255,255,0.2);
-	padding: 10px;
-	border-radius: 4px;
-	font-weight: 600;
-}
+
 img {
 	max-width: 100%;
 	max-height: 570px;
