Add index.html for gh-pages

--- a/index.jade
+++ b/index.jade
@@ -166,7 +166,7 @@ html
 						li Best place to simulate a browser is a headless browser
 
 				article
-					h1 CASPER ISN'T NODE OR V8
+					h1 CASPER ISN'T NODE
 
 				article
 					h2 Casper is it's own runtime
@@ -177,7 +177,7 @@ html
 						li #!/usr/bin/env casperjs starts casper (JavaScriptCore)
 
 				article
-					h2 Casper is focused on driving the browser
+					h2 Casper code drives a browser
 					p Except stuff inside .evaluate(), which is run on the page
 					pre.prettyprint
 						code(data-lang="javascript").
