--- a/index.jade
+++ b/index.jade
@@ -221,9 +221,8 @@ html
 					h2 Someone doesn't want me to scrape!
 					ul.build
 						li Reconsider
-						li Use a modern useragent
-						li Check your referers and CSRF tokens
-						li proxymesh.com - 280s IPs per day
+						li Check useragent, referers and CSRF tokens
+						li Get more IPs - proxymesh.com - 280s IPs per day
 						li Various things on GitHub can defeat CloudFlare
 
 				article
